[project]
name = "log-analyzer-3-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "regex>=2025.9.18",
    "streamlit>=1.49.1",
    "tldextract>=5.3.0",
    "typer>=0.19.0",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
]
